--- a/vignettes/BenHamou03.rmd
+++ b/vignettes/BenHamou03.rmd
@@ -1,11 +1,11 @@
 ---
-title: "Vignette for `cir` Package"
+title: "Vignette for the `cir` Package"
 subtitle: "Using Up-and-Down data from Benhamou et al. (2003)"
 author: "Assaf Oron"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette for 'cir' Package}
+  %\VignetteIndexEntry{Vignette for the 'cir' Package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -17,7 +17,9 @@ vignette: >
 # dir.create("inst/doc")
 # file.copy(dir("vignettes", full.names=TRUE), "inst/doc", overwrite=TRUE)
 # (from https://community.rstudio.com/t/browsevignettes-mypackage-saying-no-vignettes-found/68656/6 )
-  
+
+options(rmarkdown.html_vignette.check_title = FALSE)
+
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#"
@@ -32,11 +34,11 @@ Up-and-down data analysis was the original motivation for developing CIR and `ci
 
 If your interest is mainly in UD data analysis, then I have a dedicated UD package called `upndown` in *"advanced Beta"* stage (as of Spring 2023). It includes wrappers for even simpler, single-command plotting and estimation of UD datasets, using `cir` package functions with the defaults already dialed onto the UD context. You can download that package using `remotes::install_github(assaforon/upndown)`.
 
-## The Study
+## The Study in our Example
 
 Benhamou et al. (2003) randomized women volunteers in labor into two groups, receiving as analgesic either ropivacaine or levobupivacaine, to estimate each agent’s median effective dose (ED$_{50}$) for this condition, and to test whether there is significant difference in efficacy by comparing the two estimates. The original study used a "traditional" UD dose-averaging estimation method, concluding that even though levobupivacaine seemed 19% more potent, the difference between ED$_{50}$s was not significant. To derive inference about this difference, they apparently used the standard errors of dose averages in a $t$-test like manner.
 
-Pace and Stylianou (2007) re-analyzed the data using isotonic regression (IR) and $83\%$ bootstrap confidence intervals (CIs); under certain assumptions, examining whether these CIs overlap is equivalent to rejecting the Null hypothesis with $\alpha = 0.05.$ ^[Payton ME, Greenstone MH, Schenker N. Overlapping confidence intervals or standard error intervals:  What do they mean in terms of statistical significance? J Insect Sci. 2003;3(1).] They found a larger difference: levobupivacaine was 37% more potent according to the IR estimates. Furthermore, they diffrence was deemed statistically significant because the $83\%$ did not overlap.
+Pace and Stylianou (2007) re-analyzed the data using isotonic regression (IR) and $83\%$ bootstrap confidence intervals (CIs); under certain assumptions, examining whether these CIs overlap is equivalent to rejecting the Null hypothesis with $\alpha = 0.05.$ ^[Payton ME, Greenstone MH, Schenker N. Overlapping confidence intervals or standard error intervals:  What do they mean in terms of statistical significance? J Insect Sci. 2003;3(1).] They found a larger difference: levobupivacaine was 37% more potent according to the IR estimates. Furthermore, they diffrence was deemed statistically significant because the $83\%$ CIs did not overlap.
 
 Here we revisit this experiment yet again. To reduce some confusion, we drop the percent sign from description of doses used *(they were given as concentrations in percent in the original)*.
 
@@ -75,11 +77,11 @@ plot(bhamou03levo, ylim=doserange, ylab="Concentration (%)", main='Levobupivacai
 
 The "traditional" estimates in the original articles, just used some type of average of the doses administered. This is based on the premise that over time, up-and-down designs concentrate these doses roughly symmetrically around the target percentile.
 
-However, generally the "traditional" estimates are rather outdated and lack robustness. We recommend CIR as the standard estimator for up-and-down experiments (see e.g., [Oron et al. 2022 supplement (pdf link)](https://cdn-links.lww.com/permalink/aln/c/aln_2022_05_25_oron_aln-d-21-01101_sdc1.pdf)).
+Generally speaking, the "traditional" estimates are rather outdated and lack robustness. We recommend CIR as the standard estimator for up-and-down experiments (see e.g., [Oron et al. 2022 supplement (pdf link)](https://cdn-links.lww.com/permalink/aln/c/aln_2022_05_25_oron_aln-d-21-01101_sdc1.pdf)).
 
 ## Dose-Response Plain and ED$_{50}$ Estimates
 
-To derive IR and CIR estimates, we take the `DRtrace` trajectory objects and generate `doseResponse` dose-rate-count summaries.
+To derive CIR estimates, we take the `DRtrace` trajectory objects and generate `doseResponse` dose-rate-count summaries.
 
 ```{r doseResponse}
 bhamou03ropiRates = doseResponse(bhamou03ropi)
@@ -90,7 +92,7 @@ knitr::kable(bhamou03levoRates, row.names=FALSE,align='ccr',digits=c(2,4,0))
 
 Let us visualize the response frequencies on **the dose-response plane, which is "where CIR estimation action happens."** *(and likewise for any regression-based estimation of dose-response data)* 
 
-In a similar manner to the plots above, the plots below are native `cir` methods for `doseResponse` objects. Symbol area is proportional to the number of observations at each dose. To change to fixed-size, use `varsize=FALSE`.
+Analogously to the plots above, the plots below are native `cir` methods for `doseResponse` objects. Symbol area is proportional to the number of observations at each dose. To change to fixed-size, use `varsize=FALSE`.
 
 
 ```{r drfig0,fig.width=10,fig.height=5,out.height=400,out.width=800}
@@ -106,7 +108,7 @@ ylab="Proportion Effective", main='Levobupivacaine Arm', ylim=0:1)
 abline( h=0.5, col='purple', lty=2)
 ```
 
-Target-dose estimation via regression is an [**"Inverse Problem"**](https://en.wikipedia.org/wiki/Inverse_problem): we draw a line at the desired $y$ value (in this case, $50\%$ or 0.5, marked in purple), and look for the best-fitting $x$ value. With the Ropivacaine arm data (left), there's a relatively clear transition between low-response and high-response region, so the target seems to lie between concentrations $0.09$ and $0.10$. We cannot be very confident of that, given the limited sample of binary observations - but at least there's a clear candidate. 
+Target-dose estimation via regression is an [**"Inverse Problem"**](https://en.wikipedia.org/wiki/Inverse_problem): we draw a line at the desired $y$ value (in this case, $50\%$ or 0.5, marked in purple), and look for the best-fitting $x$ value. With the Ropivacaine arm data (left), there's a relatively clear transition between low-response and high-response regions, so the target seems to lie between concentrations $0.09$ and $0.10$. We cannot be very confident of that, given the limited amount of information - but at least there's a clear candidate. 
 
 With Levobupivacaine data (right) the picture is far more murky. Concentrations $0.07$ and $0.08$ go above $50\%$ response, but  $0.09$ and $0.10$ go back below that level! As we visualize near the end, CIR helps clear that murky picture via the simplest pooled response-rate averages that makes the overall dose-response curve obey monotonicity.
 
@@ -120,9 +122,9 @@ quickIsotone(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE)
 Estimating the ED$_{50}$, a.k.a. **the target dose**, is done very similarly:
 
 ```{r cir}
-ropiTargetCIR=quickInverse(bhamou03ropiRates, target=0.5, adaptiveShrink=TRUE)
+ropiTargetCIR = quickInverse(bhamou03ropiRates, target=0.5, adaptiveShrink=TRUE)
 ropiTargetCIR 
-levoTargetCIR=quickInverse(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE)
+levoTargetCIR = quickInverse(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE)
 levoTargetCIR
 ```
 
@@ -130,11 +132,10 @@ You can also do the estimation single-step from the `x, y` data; the functions w
 
 ### Notes
  - The target-dose estimate appears under the word `point`: `r round(ropiTargetCIR$point, 4)` for ropivacaine and `r round(levoTargetCIR$point, 4)` for  levobupivacaine.
- - We specify the target as a fraction, via the `target` argument.
+ - We specify the target response-rate as a fraction, via the `target` argument.
  - Default CIs are 90% rather than 95%, due to the large variability and limited confidence in these typically small-sample experiments. To change it use the `conf` argument.
- - The `adaptiveShrink` option performs an empirical correction of the bias induced by the adaptive design, a bias discovered and described recently by Flournoy and Oron.^[Flournoy N, Oron AP. Bias induced by adaptive dose-finding designs. J Appl Stat. 2020;47(13-15):2431-2442.] This type of bias is induced not just by UD designs, but also by model-based adaptive designs such as the Continual Reassessment Method. **Because of this bias, we strongly recommend to *not* estimate any target except 0.5 *(or a value very close to 0.5)* from these data, except for exploratory/illustrative purposes.** The correction serves mostly to provide better CI coverage for the target dose estimate.
- - In an experiment with non-median targets such as the ED$_{90}$, we recommend adding the option `adaptiveCurve=TRUE` to the command above. This broadens the confidence intervals a bit ore to ensure proper coverage, which is more challenging the closer the target gets to the edge of the dose-response curve.
- 
+ - The `adaptiveShrink` option performs an empirical correction of the bias induced by the adaptive design, a bias discovered and described recently by Flournoy and Oron.^[Flournoy N, Oron AP. Bias induced by adaptive dose-finding designs. J Appl Stat. 2020;47(13-15):2431-2442.] This type of bias is induced not just by UD designs, but also by model-based adaptive designs such as the Continual Reassessment Method. It is minimal near the target dose, but flares out to substantial magnitudes in both directions. **Because of this bias, we strongly recommend to *not* estimate any target except 0.5 *(or a value very close to 0.5)* from these data, except for exploratory/illustrative purposes.** The correction serves mostly to provide better CI coverage for the target dose estimate.
+
 Let us calculate 83% CIs, to evaluate the evidence for different potencies via the overlapping-intervals method.
 
 ```{r ci83}
@@ -146,7 +147,7 @@ levo83
 
 Paradoxically, despite using a point-estimation method very close to Pace and Stylianou's (CIR is a minor upgrade of IR), we reach a conclusion similar to the original authors: **the 83% confidence intervals do overlap, in fact they fully overlap - suggesting no evidence for a difference in potency** at the $\alpha=0.05$ level. 
 
-Interestingly, our point estimates are very similar to the Pace-Stylianou reanalysis, and so is our estimated levo/ropi potency ratio (1.37, quite a bit higher than Benhamou et al.’s 1.19).  **Where we part ways with Pace and Stylianou - dramatically - are indeed the confidence intervals for which our method is quite different.** Pace and Stylianou used an adaptation of the bootstrap, whereas we use an analytical approach based on Morris’ theoretical work with intervals for datasets with monotone dose-response data,^[Morris MD. Small-Sample Confidence Limits for Parameters under Inequality Constraints with Application to Quantal Bioassay. Biometrics. 1988;44:1083-1092.] the Delta method, and additional modifications to adapt to typical dose-finding data limitations.
+Interestingly, our point estimates are very similar to the Pace-Stylianou reanalysis, and so is our estimated levo/ropi potency ratio (1.37, quite a bit higher than Benhamou et al.’s 1.19).  **Where we part ways with Pace and Stylianou - dramatically - is indeed the confidence intervals for which our method is quite different.** Pace and Stylianou used an adaptation of the bootstrap, whereas we use an analytical approach based on Morris’ theoretical work with intervals for datasets with monotone dose-response data,^[Morris MD. Small-Sample Confidence Limits for Parameters under Inequality Constraints with Application to Quantal Bioassay. Biometrics. 1988;44:1083-1092.] the Delta method, and additional modifications to adapt to typical dose-finding data limitations.
 
 Looking in more detail at the two confidence limits with the biggest difference between our method and the boostrap: their $83\%$ LCL for Ropivacaine is $0.087$ - only 0.6 of a dose interval below their point estimate  - whereas ours is $0.079$, nearly 1.5 intervals below our point estimate. Even more dramatic is the difference between Levobupivacaine's $83\%$ UCLs: $0.081$ (1.3 intervals above point-estimate) vs. $0.109$ (a full 4 intervals above that estimate).  
 
@@ -175,14 +176,16 @@ levoCurveIR = oldPAVA(bhamou03levoRates, full=TRUE)
 levoCurveCIR = cirPAVA(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE, full=TRUE)
 ```
 
-With `full=TRUE`, each of these returns a list of three `doseResponse` objects. Here's one of the objects:
+With `full=TRUE`, each of these returns a list of three `doseResponse` objects. Here's one example:
 ```{r forward2}
 levoCurveCIR
 ```
 
-`$output` is the estimates at the original doses *(which is what `quickIsotone()` returns sans the CIs)*, `$input` is the incoming data, and `$shrinkage` is the output at the doses where the algorithm makes the pooled estimates (then interpolated to generate `$output`) - i.e., **`$shrinkage` is the actual regression curve found by the algorithm.** With `oldPAVA()`, this component will always be identical to `$output`.
+ - `$output` is the estimates at the original doses *(which is what `quickIsotone()` returns sans the CIs)*, 
+ - `$input` is the incoming data, and 
+ - `$shrinkage` is the output at the doses where the algorithm makes the pooled estimates (then interpolated to generate `$output`). IOW, **`$shrinkage` is the actual regression curve found by the algorithm.** With `oldPAVA()`, this component will always be identical to `$output`.
 
-We end with the dose-response plots, the regression curves and the target estimates, with the two arms arranged vertically to help visualize the CI overlap.
+We end with the dose-response plots, the regression curves and the target estimates, with the two arms aligned and arranged vertically to help visualize the CI overlap.
 
 ```{r drfig,fig.width=6,fig.height=12,out.height=1000,out.width=500}
 par(mfrow=c(2,1), las=1, mar=c(4,4,4,1)) # image format parameters
@@ -221,11 +224,11 @@ lines(c(0.059, 0.081), rep(0.49,2))
 ### Notes
 
  - The 2007 CIs were shifted slightly downward in the plot, to make them visible.
- - Referring back to the "murky" picture around target in the Levobupivacaine dose-response plots, we see that both IR (black dashes) and CIR (solid blue) pool the observations from $x = 0.08, 0,09, 0.10$ into a single weighted average, which is only slightly higher than the observation at $x = 0.07.$ The main difference is that IR creates a flat "stretch" with that pooled $y$ value, whereas CIR also pools along the $x$ axis into a single point on the dose-response plane. So both these nonparametric algorithms *"convert the murkiness"* into concluding (with very limited confidence, given the overall small $n$) that **$F(x)$ is very shallow for a long stretch, right above the $y = 0.5$ target response rate.**
+ - Referring back to the "murky" picture around target in the Levobupivacaine dose-response plots, we see that both IR (black dashes) and CIR (solid blue) pool the observations from $x = 0.08, 0,09, 0.10$ into a single weighted average $y$ value, which is only slightly higher than the estimate at $x = 0.07.$ The main difference is that IR creates a flat "stretch" with that pooled $y$ value, whereas CIR also pools along the $x$ axis into a single point on the dose-response plain. So both these nonparametric algorithms *"convert the murkiness"* into concluding (with very limited confidence, given the overall small $n$) that **$F(x)$ is very shallow for a long stretch, right above the $y = 0.5$ target response rate.**
  
  - We see how the CIR intervals stretch to accommodate this shallowness. Indeed, **our confidence-interval method for inverse estimation is driven by local slope around target**, which we believe is the more correct approach.
- - Take in particular the Levobupivacaine plot at $x = 0.10$. The CIR estimate of $F(x)$ there is `r round(levoCurveCIR$output$y[6], 3)`. The IR estimate which is what Pace and Stylianou used to inform their bootstrap, is `r round(levoCurveIR$output$y[6], 3)` - even closer to the $50\%$ study target-rate, and statistically indistinguishable from it at these sample sizes. Yet, $0.10$ lies not only outside the bootstrap $83\%$ CI, but also outside the bootstrap $95\%$ CI (which is $0.058, 0.095$). This suggests that the bootstrap intervals are substantially too short.
- - Prior to `cir` package version 2.3.0, the estimated slope informing the CI was the same to the right and left of target, and hence CIs were usually near-symmetric *(and in this particular example, much shorter)*. We now estimate different *"left"* and *"right"* slopes. To revert to single-slope version, use the argument `slopeImprovement = FALSE` in your `quickInverse()` call.  
+ - Take in particular the Levobupivacaine plot at $x = 0.10$. The CIR estimate of $F(x)$ there is `r round(levoCurveCIR$output$y[6], 3)`. The IR estimate which is what Pace and Stylianou used to inform their bootstrap, is `r round(levoCurveIR$output$y[6], 3)` - even closer to the $50\%$ study target-rate, and statistically indistinguishable from it at these sample sizes. Yet, $0.10$ lies not only outside the 2007 bootstrap's $83\%$ CI, but also outside the $95\%$ CI (which is $0.058, 0.095$). This suggests that the bootstrap intervals are substantially too short.
+ - Prior to `cir` package version 2.3.0, the estimated slope informing the CI was the same to the right and left of target, and hence CIs were usually near-symmetric *(and in this particular example, much shorter)*. We now estimate different *"left"* and *"right"* slopes. To revert to the single-slope version, use the argument `slopeRefinement = FALSE` in your `quickInverse()` call.  
  - In this demonstration the CIR curves differ from the ordinary IR curves not only in the CIR algorithm that “shrinks” horizontal intervals to single points, but also in the bias correction found by Flournoy and Oron (2020) and mentioned earlier. In principle this correction is compatible with both methods, but here we applied it only to CIR, because it did not exist at the time of Pace and Stylianou’s article.
 
 
